--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "rollup": "^4.18.1",
     "rollup-plugin-vue": "6.0.0-beta.10",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
   }
 }
